crates/aranya-policy-compiler/tests/data/facts/invalid_value_name.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: fact literal does not match definition: Expected value x, got y
  |
1 | fact Foo[k int]=>{x int}
  |                   - expected because of this
2 | action test() result[unit, string] {
3 |     check exists Foo[k: saturating_add(1, 1)]=>{y: 5} else return Err("check failed")
  |                                                 ^ Expected value x, got y
